istio-ambient-mesh-with-argo-rollouts-with-gatewayapi-canary-deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
    #istio.io/ambient-enabled: "true"
    istio.io/use-waypoint: waypoint
  name: traffic-router
