istio-ambient-mesh-with-argo-rollouts-with-gatewayapi-canary-deployment/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-rollout-canary
  namespace: traffic-router
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-rollout

---
apiVersion: v1
kind: Service
metadata:
  name: istio-rollout-stable
  namespace: traffic-router
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-rollout
