istio-ambient-mesh-with-argo-rollouts-with-gatewayapi-canary-deployment/waypoint.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  #labels:
  #  istio.io/waypoint-for: all
  name: waypoint
  namespace: traffic-router
spec:
  gatewayClassName: istio-waypoint
  listeners:
  - name: mesh
    port: 15008
    protocol: HBONE
#    protocol: ALL
    allowedRoutes:
        namespaces:
           from: Same
